# ARI

./: .cspell.json  .cursorrules  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COUNCIL_VOTE_SIGNOFF.md  COUNCIL_WORKSPACE.md  GLOSSARY.md  LICENSE  MAC-MINI-HANDOFF-PROMPT.md  MANIFEST.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  ecosystem.config.cjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  INSTRUCTIONS.md  settings.json
.github/: ARI_COMMIT_SETUP.md  labeler.yml
.husky/: pre-commit
CONFIG/: active_config.json  allowlists.json  permissions.json  retention.json  safe_defaults.json
COUNCIL/: ARCHITECT.md  PRODUCT_UX.md  RELIABILITY_OPS.md  RESEARCH.md  SECURITY.md
DOCS/: ARCHITECTURE.md  BOOTSTRAP.md  DECISIONS.md  GOVERNANCE.md  LOGGING.md  MEMORY.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  STYLE_GUIDE.md  TEST_PLAN.md  THREAT_MODEL.md  TOOLS.md
PLAYBOOKS/: capacity_overload.md  client_escalation.md  memory_poisoning.md  prompt_injection.md
SCHEMAS/: config.json  event.json  memory_entry.json  tool_call.json
SCRIPTS/: backup.sh  bootstrap.sh  deploy.sh  health_check.sh  restore.sh  rollback.sh  test.sh
SYSTEM/: ARBITER.md  CONSTITUTION.md  CORE.md  CORE_IDENTITY.md  EXECUTOR.md  GUARDIAN.md  MEMORY_MANAGER.md  OVERSEER.md  PLANNER.md  ROUTER.md
TEMPLATES/: email.md  incident_report.md  (+2 more)
src/kernel/sanitizer-rs/: Cargo.toml  README.md
src/kernel/sanitizer-rs/src/: lib.rs
(+1051 files in other folders)
