[package]
name = "ari_sanitizer"
version = "0.1.0"
edition = "2021"
authors = ["Pryce Hedrick"]
description = "High-performance WASM sanitizer for ARI Kernel"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
regex = "1.10.4"
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
